# random-halloween

./: .dockerignore  .gitignore  .platform.app.yaml  Dockerfile  README.md  main.py  pyproject.toml  randomizer.py  requirements.txt  server.py
.github/workflows/: aws-ecr-ecs-inline-policy.json  aws-ecs-task-definition.json  aws.yml  inline-policy.json
.platform/: routes.yaml  services.yaml
web/templates/: index.html
