[tool.poetry]
name = "random-halloween"
version = "0.1.0"
description = ""
authors = ["David McKee <daevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
aiofiles = "^0.7.0"
uvicorn = "^0.15.0"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
